{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 204,
  "lineage": "3b25dbec-e9fb-0f51-fe05-f761ea9a739d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0926db476ef0dfb59",
            "arn": "arn:aws:ec2:us-east-1:767398061335:elastic-ip/eipalloc-0926db476ef0dfb59",
            "association_id": "eipassoc-0d781d6536062d05e",
            "domain": "vpc",
            "id": "eipalloc-0926db476ef0dfb59",
            "instance": "i-0e8ba4d83b5bf2680",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0025232033ede2f6a",
            "private_dns": "ip-10-0-101-112.ec2.internal",
            "private_ip": "10.0.101.112",
            "public_dns": "ec2-3-228-246-102.compute-1.amazonaws.com",
            "public_ip": "3.228.246.102",
            "public_ipv4_pool": "amazon",
            "tags": {
              "environment": "Dev",
              "owners": "Bhargav"
            },
            "tags_all": {
              "environment": "Dev",
              "owners": "Bhargav"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.aws_availability_zones.available",
            "module.ec2_public.aws_iam_instance_profile.this",
            "module.ec2_public.aws_iam_role.this",
            "module.ec2_public.aws_iam_role_policy_attachment.this",
            "module.ec2_public.aws_instance.ignore_ami",
            "module.ec2_public.aws_instance.this",
            "module.ec2_public.aws_spot_instance_request.this",
            "module.ec2_public.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_public.data.aws_partition.current",
            "module.ec2_public.data.aws_ssm_parameter.this",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052b9fbb6949f883a",
            "arn": "arn:aws:ec2:us-east-1:767398061335:instance/i-0e8ba4d83b5bf2680",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e8ba4d83b5bf2680",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-eks",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0025232033ede2f6a",
            "private_dns": "ip-10-0-101-112.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.112",
            "public_dns": "ec2-98-81-90-166.compute-1.amazonaws.com",
            "public_ip": "98.81.90.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c71e0ad7eb2dad30",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-078784bf2113bbff9",
            "tags": {
              "Name": "Bhargav-Dev-BastionHost",
              "environment": "Dev",
              "owners": "Bhargav"
            },
            "tags_all": {
              "Name": "Bhargav-Dev-BastionHost",
              "environment": "Dev",
              "owners": "Bhargav"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "Bhargav-Dev-BastionHost"
            },
            "vpc_security_group_ids": [
              "sg-05c85fa27790a9e06"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.aws_availability_zones.available",
            "module.ec2_public.aws_iam_instance_profile.this",
            "module.ec2_public.aws_iam_role.this",
            "module.ec2_public.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_public.data.aws_partition.current",
            "module.ec2_public.data.aws_ssm_parameter.this",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398061335:security-group/sg-05c85fa27790a9e06",
            "description": "Security Group with SSH port open for everybody (IPv4 CIDR), egress ports are all world open",
            "egress": [],
            "id": "sg-05c85fa27790a9e06",
            "ingress": [],
            "name": "Bhargav-Dev-public-bastion-sg-20240924091808179000000009",
            "name_prefix": "Bhargav-Dev-public-bastion-sg-",
            "owner_id": "767398061335",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bhargav-Dev-public-bastion-sg",
              "environment": "Dev",
              "owners": "Bhargav"
            },
            "tags_all": {
              "Name": "Bhargav-Dev-public-bastion-sg",
              "environment": "Dev",
              "owners": "Bhargav"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-08a3afcb05ae574ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-3683755813",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-05c85fa27790a9e06",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-2457853942",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05c85fa27790a9e06",
            "security_group_rule_id": "sgr-0eaf8533ad4aa260d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398061335:network-acl/acl-0c786b57d45eafcfc",
            "default_network_acl_id": "acl-0c786b57d45eafcfc",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0c786b57d45eafcfc",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "767398061335",
            "subnet_ids": [
              "subnet-049e47f571b8bdf4e",
              "subnet-055eab7d32a88e58d",
              "subnet-078784bf2113bbff9",
              "subnet-08886dc08688aaaf5",
              "subnet-09e455c022b964176",
              "subnet-0d8dc89cee514431b"
            ],
            "tags": {
              "Name": "Bhargav-Dev-eks-1-default",
              "environment": "Dev",
              "owners": "Bhargav"
            },
            "tags_all": {
              "Name": "Bhargav-Dev-eks-1-default",
              "environment": "Dev",
              "owners": "Bhargav"
            },
            "vpc_id": "vpc-08a3afcb05ae574ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398061335:route-table/rtb-0c0c04eeed36fef9a",
            "default_route_table_id": "rtb-0c0c04eeed36fef9a",
            "id": "rtb-0c0c04eeed36fef9a",
            "owner_id": "767398061335",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "Bhargav-Dev-eks-1-default",
              "environment": "Dev",
              "owners": "Bhargav"
            },
            "tags_all": {
              "Name": "Bhargav-Dev-eks-1-default",
              "environment": "Dev",
              "owners": "Bhargav"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-08a3afcb05ae574ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398061335:security-group/sg-01f3e8be0c36fdc5b",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-01f3e8be0c36fdc5b",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "767398061335",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bhargav-Dev-eks-1-default",
              "environment": "Dev",
              "owners": "Bhargav"
            },
            "tags_all": {
              "Name": "Bhargav-Dev-eks-1-default",
              "environment": "Dev",
              "owners": "Bhargav"
            },
            "vpc_id": "vpc-08a3afcb05ae574ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0724c53f5ae8e50dd",
            "arn": "arn:aws:ec2:us-east-1:767398061335:elastic-ip/eipalloc-0724c53f5ae8e50dd",
            "domain": "vpc",
            "id": "eipalloc-0724c53f5ae8e50dd",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-4-212-245.compute-1.amazonaws.com",
            "public_ip": "52.4.212.245",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Bhargav-Dev-eks-1-us-east-1a",
              "environment": "Dev",
              "owners": "Bhargav"
            },
            "tags_all": {
              "Name": "Bhargav-Dev-eks-1-us-east-1a",
              "environment": "Dev",
              "owners": "Bhargav"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398061335:internet-gateway/igw-05aff6b6338a77f8d",
            "id": "igw-05aff6b6338a77f8d",
            "owner_id": "767398061335",
            "tags": {
              "Name": "Bhargav-Dev-eks-1",
              "environment": "Dev",
              "owners": "Bhargav"
            },
            "tags_all": {
              "Name": "Bhargav-Dev-eks-1",
              "environment": "Dev",
              "owners": "Bhargav"
            },
            "vpc_id": "vpc-08a3afcb05ae574ea"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0724c53f5ae8e50dd",
            "association_id": "eipassoc-01a1f61d77625c8df",
            "connectivity_type": "public",
            "id": "nat-011e0380afbebfabf",
            "network_interface_id": "eni-058673682089fb7d4",
            "private_ip": "10.0.101.248",
            "public_ip": "52.4.212.245",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-078784bf2113bbff9",
            "tags": {
              "Name": "Bhargav-Dev-eks-1-us-east-1a",
              "environment": "Dev",
              "owners": "Bhargav"
            },
            "tags_all": {
              "Name": "Bhargav-Dev-eks-1-us-east-1a",
              "environment": "Dev",
              "owners": "Bhargav"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01533efbf6c3b13bc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-011e0380afbebfabf",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01533efbf6c3b13bc",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05aff6b6338a77f8d",
            "id": "r-rtb-0a79e662206567aed1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a79e662206567aed",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398061335:route-table/rtb-042cff039d6449bd9",
            "id": "rtb-042cff039d6449bd9",
            "owner_id": "767398061335",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Bhargav-Dev-eks-1-db",
              "environment": "Dev",
              "owners": "Bhargav"
            },
            "tags_all": {
              "Name": "Bhargav-Dev-eks-1-db",
              "environment": "Dev",
              "owners": "Bhargav"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a3afcb05ae574ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398061335:route-table/rtb-01533efbf6c3b13bc",
            "id": "rtb-01533efbf6c3b13bc",
            "owner_id": "767398061335",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Bhargav-Dev-eks-1-private",
              "environment": "Dev",
              "owners": "Bhargav"
            },
            "tags_all": {
              "Name": "Bhargav-Dev-eks-1-private",
              "environment": "Dev",
              "owners": "Bhargav"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a3afcb05ae574ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398061335:route-table/rtb-0a79e662206567aed",
            "id": "rtb-0a79e662206567aed",
            "owner_id": "767398061335",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Bhargav-Dev-eks-1-public",
              "environment": "Dev",
              "owners": "Bhargav"
            },
            "tags_all": {
              "Name": "Bhargav-Dev-eks-1-public",
              "environment": "Dev",
              "owners": "Bhargav"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a3afcb05ae574ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052d4f2525affe181",
            "route_table_id": "rtb-042cff039d6449bd9",
            "subnet_id": "subnet-049e47f571b8bdf4e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035a0051f601da418",
            "route_table_id": "rtb-042cff039d6449bd9",
            "subnet_id": "subnet-09e455c022b964176"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0573d700c671ca67b",
            "route_table_id": "rtb-01533efbf6c3b13bc",
            "subnet_id": "subnet-0d8dc89cee514431b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0395baf334624faa1",
            "route_table_id": "rtb-01533efbf6c3b13bc",
            "subnet_id": "subnet-08886dc08688aaaf5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bbe5790993689c5",
            "route_table_id": "rtb-0a79e662206567aed",
            "subnet_id": "subnet-078784bf2113bbff9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056ed3caf031f5bc3",
            "route_table_id": "rtb-0a79e662206567aed",
            "subnet_id": "subnet-055eab7d32a88e58d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398061335:subnet/subnet-049e47f571b8bdf4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049e47f571b8bdf4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398061335",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Bhargav-Dev-eks-1-db-us-east-1a",
              "Type": "database-subnets",
              "environment": "Dev",
              "owners": "Bhargav"
            },
            "tags_all": {
              "Name": "Bhargav-Dev-eks-1-db-us-east-1a",
              "Type": "database-subnets",
              "environment": "Dev",
              "owners": "Bhargav"
            },
            "vpc_id": "vpc-08a3afcb05ae574ea"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398061335:subnet/subnet-09e455c022b964176",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e455c022b964176",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398061335",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Bhargav-Dev-eks-1-db-us-east-1b",
              "Type": "database-subnets",
              "environment": "Dev",
              "owners": "Bhargav"
            },
            "tags_all": {
              "Name": "Bhargav-Dev-eks-1-db-us-east-1b",
              "Type": "database-subnets",
              "environment": "Dev",
              "owners": "Bhargav"
            },
            "vpc_id": "vpc-08a3afcb05ae574ea"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398061335:subnet/subnet-0d8dc89cee514431b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8dc89cee514431b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398061335",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Bhargav-Dev-eks-1-private-us-east-1a",
              "Type": "private-subnets",
              "environment": "Dev",
              "kubernetes.io/cluster/Bhargav-Dev-eks-1": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "Bhargav"
            },
            "tags_all": {
              "Name": "Bhargav-Dev-eks-1-private-us-east-1a",
              "Type": "private-subnets",
              "environment": "Dev",
              "kubernetes.io/cluster/Bhargav-Dev-eks-1": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "Bhargav"
            },
            "vpc_id": "vpc-08a3afcb05ae574ea"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398061335:subnet/subnet-08886dc08688aaaf5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08886dc08688aaaf5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398061335",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Bhargav-Dev-eks-1-private-us-east-1b",
              "Type": "private-subnets",
              "environment": "Dev",
              "kubernetes.io/cluster/Bhargav-Dev-eks-1": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "Bhargav"
            },
            "tags_all": {
              "Name": "Bhargav-Dev-eks-1-private-us-east-1b",
              "Type": "private-subnets",
              "environment": "Dev",
              "kubernetes.io/cluster/Bhargav-Dev-eks-1": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "Bhargav"
            },
            "vpc_id": "vpc-08a3afcb05ae574ea"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398061335:subnet/subnet-078784bf2113bbff9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078784bf2113bbff9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767398061335",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Bhargav-Dev-eks-1-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "Dev",
              "kubernetes.io/cluster/Bhargav-Dev-eks-1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "Bhargav"
            },
            "tags_all": {
              "Name": "Bhargav-Dev-eks-1-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "Dev",
              "kubernetes.io/cluster/Bhargav-Dev-eks-1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "Bhargav"
            },
            "vpc_id": "vpc-08a3afcb05ae574ea"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398061335:subnet/subnet-055eab7d32a88e58d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055eab7d32a88e58d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767398061335",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Bhargav-Dev-eks-1-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "Dev",
              "kubernetes.io/cluster/Bhargav-Dev-eks-1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "Bhargav"
            },
            "tags_all": {
              "Name": "Bhargav-Dev-eks-1-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "Dev",
              "kubernetes.io/cluster/Bhargav-Dev-eks-1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "Bhargav"
            },
            "vpc_id": "vpc-08a3afcb05ae574ea"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398061335:vpc/vpc-08a3afcb05ae574ea",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c786b57d45eafcfc",
            "default_route_table_id": "rtb-0c0c04eeed36fef9a",
            "default_security_group_id": "sg-01f3e8be0c36fdc5b",
            "dhcp_options_id": "dopt-024fe5482e58ab437",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08a3afcb05ae574ea",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c0c04eeed36fef9a",
            "owner_id": "767398061335",
            "tags": {
              "Name": "Bhargav-Dev-eks-1",
              "environment": "Dev",
              "owners": "Bhargav"
            },
            "tags_all": {
              "Name": "Bhargav-Dev-eks-1",
              "environment": "Dev",
              "owners": "Bhargav"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}